# deconvolution

./: .gitignore  .gitmodules  LICENSE  README.md  __init__.py  benchmark.py  deconv.py  deconvolution.py  environment.yml  gpu_benchmark.py  models.py  pipeline.py  psf.py  pyproject.toml  requirements.txt  run.py  setup.py
.github/workflows/: build-appimage.yml  build-installer.yml
deconv/: __init__.py  rlgc.py
deconvolution/: __init__.py  core.py  io.py  operators.py  psf.py  utils.py
formats/: README.md  __init__.py
installer/: cupy_walker.py  entry.py  petakit.desktop  petakit_linux.spec  petakit_windows.spec  smoke_test.py
psf/: __init__.py  generator.py
readers/: __init__.py  base.py  detect.py  individual.py  multipage.py  ometiff.py
scripts/: benchmark.py  deconvolve.py  process_large_dataset.py  test_andrea.py
src/deconwolf/: __init__.py  binary.py  cli.py  core.py  engine.py  psf.py
src/deconwolf/gui/: main.py
src/deconwolf/readers/: base.py  detect.py  ometiff.py
src/petakit/: __init__.py  cli.py  core.py  engine.py  psf.py
src/petakit/gui/: __init__.py  main.py
src/petakit/readers/: __init__.py  base.py  current_stack.py  currentstack.py  detect.py  individual.py  ometiff.py
synthetic/: __init__.py  __main__.py  benchmark.py  cli.py  forward_model.py  metrics.py  phantoms.py  test_suite.py
tests/: __init__.py  conftest.py  test_cli.py  test_core.py  test_engine.py  test_psf.py  test_readers.py
