[project]
name = "deconwolf"
version = "0.0.0"
description = "Microscopy deconvolution with PetaKit5D algorithms"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy",
    "tifffile",
    "scipy",
    "psfmodels",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x"]
gui = ["pyqt5"]
dev = ["pytest"]

[project.scripts]
deconwolf = "deconwolf.cli:main"
deconwolf-gui = "deconwolf.gui.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deconwolf"]
