[project]
name = "petakit"
version = "0.0.0"
description = "Microscopy deconvolution with PetaKit5D algorithms"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy",
    "tifffile",
    "scipy",
    "psfmodels",
    "psutil",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x"]
gui = ["pyqt5"]
dev = ["pytest"]

[project.scripts]
petakit = "petakit.cli:main"
petakit-gui = "petakit.gui.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/petakit"]
