[project]
name = "petakit"
version = "0.0.0"
description = "Microscopy deconvolution with PetaKit5D algorithms"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=2.0",
    "tifffile",
    "scipy",
    "psfmodels",
    "psutil",
    "cupy-cuda12x",
]

[project.optional-dependencies]
gui = ["pyqt5", "ndviewer-light @ git+https://github.com/Cephla-Lab/ndviewer_light.git"]
dev = ["pytest"]

[project.scripts]
petakit = "petakit.cli:main"
petakit-gui = "petakit.gui.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/petakit"]
